{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 90,
  "lineage": "70d7c8a0-1587-ae7b-8cc4-942d34836f79",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkInterfaces/websubnet-bastion-linuxvm-nic",
            "internal_domain_name_suffix": "eevblaatusbedkyixsptoz3csh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/publicIPAddresses/websubnet-bastion-publicip",
                "subnet_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-websubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2D-61-B0",
            "name": "websubnet-bastion-linuxvm-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "virtual_machine_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Compute/virtualMachines/websubnet-bastion-linuxvm"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkInterfaces/websubnet-web-linuxvm-nic",
            "internal_domain_name_suffix": "eevblaatusbedkyixsptoz3csh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/publicIPAddresses/websubnet-web-linuxvm-publicip",
                "subnet_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-websubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-25-B4-2D",
            "name": "websubnet-web-linuxvm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "virtual_machine_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Compute/virtualMachines/websubnet-web-linuxvm"
          },
          "dependencies": [
            "azurerm_public_ip.example",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg",
            "location": "eastus",
            "name": "bastionsubnet-nsg",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "182.68.162.210",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3389",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "182.68.162.210",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "location": "eastus",
            "name": "websubnet-nsg",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMyIpAddressSSHInbound",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "182.68.162.210",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2222",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-2222",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "source_address_prefix": "182.68.162.210",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "bastionsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "source_address_prefix": "182.68.162.210",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "2222",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-2222",
            "name": "Rule-Port-2222",
            "network_security_group_name": "websubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/publicIPAddresses/websubnet-bastion-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.212.196",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "websubnet-bastion-publicip",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "app1-vm-apsvf",
            "fqdn": "app1-vm-apsvf.eastus.cloudapp.azure.com",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/publicIPAddresses/websubnet-web-linuxvm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.213.0",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "websubnet-web-linuxvm-publicip",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-bastionsubnet",
            "name": "hr-dev-bastionsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "virtual_network_name": "hr-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-websubnet",
            "name": "hr-dev-websubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "virtual_network_name": "hr-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-bastionsubnet",
            "network_security_group_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg",
            "subnet_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-websubnet",
            "network_security_group_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "subnet_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "80152a21-a413-4182-ab08-bc9f3767a297",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default",
            "location": "eastus",
            "name": "hr-dev-vnet-default",
            "resource_group_name": "hr-dev-rg-default-apsvf",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-websubnet",
                "name": "hr-dev-websubnet",
                "security_group": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg"
              },
              {
                "address_prefix": "10.0.100.0/24",
                "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-bastionsubnet",
                "name": "hr-dev-bastionsubnet",
                "security_group": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/hr-dev-rg-default-apsvf/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}